# aptos-arb-bot

./: .gitignore  .roomodes  Cargo.toml  architect_analysis.md  architect_full_project_analysis.md  config.yaml  gh.md
.github/workflows/: ci.yml  rust_ci.yml
.roo/rules-orchestrator/: gh.md
config/: default.yml  market-data-ingestor.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: aptos_test_utils.rs  errors.rs  lib.rs  traits.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  risk_manager.rs
crates/detector/: Cargo.toml  architecture.md
crates/detector/src/: api.rs  bellman_ford.rs  deduplicator.rs  exchange_const.rs  gas.rs  graph.rs  lib.rs  prelude.rs  service.rs  sizing.rs  traits.rs  transform.rs  translator.rs
crates/detector/src/graph/: mod.rs  state.rs
crates/detector/src/strategies/: cross_dex.rs  mod.rs
crates/detector/tests/: e2e_mdi_detector.rs  integration_tests.rs
crates/dex-adapter-trait/: Cargo.toml
crates/dex-adapter-trait/src/: lib.rs
crates/dex-adapters/: Cargo.toml
crates/dex-adapters/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/market-data-ingestor/: Cargo.toml  README.md  architecture.md  plan.md
crates/market-data-ingestor/src/: config.rs  data_source.rs  ingestor_config.rs  lib.rs  main.rs  processor.rs  types.rs
crates/market-data-ingestor/src/steps/: clmm_parser.rs  detector_push.rs  event_extractor.rs  filter.rs  mod.rs  parser.rs
docs/: adr-032-detector-graph-edge-handling.md  aptos_plan2.md  architecture.md  current_status.md  plan_aptos_data_ingestion.md  price_graph_design.md
