[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/dex-adapter-trait",
    "crates/detector",
    "crates/executor",
    "crates/analytics",
    "bin/arb-bot", "crates/market-data-ingestor",
]

resolver = "2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
