[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/dex-adapter-trait",
    "crates/detector",
    "crates/executor",
    "crates/analytics",
    "bin/arb-bot", 
    "crates/market-data-ingestor",
    "crates/adapters/hyperion",
]

resolver = "2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
# x25519-dalek patch removed as it was unused and check passes
