[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
rust_decimal = { version = "1.33", features = ["macros"] }
rust_decimal_macros = "1.33"

# Aptos SDK - direct git dependency, features enabled here.
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }

# Optional dependencies for Aptos testing utilities (excluding aptos-sdk as it's now direct)
testcontainers = { version = "0.20", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
anyhow = { version = "1.0", optional = true }
url = { version = "2.3", optional = true }
rand = { version = "0.7", optional = true } # Downgraded for rand_core 0.5.x compatibility
rand_core = { version = "0.5.1", optional = true } # Explicitly for aptos-sdk compatibility


[features]
# Enables Aptos integration testing utilities and their dependencies
aptos-tests = [
    "dep:testcontainers",
    # aptos-sdk is now a direct dependency, no need for "dep:aptos-sdk"
    "dep:tokio",
    "dep:anyhow",
    "dep:url",
    "dep:rand",
    "dep:rand_core"
]
