[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Internal dependencies
common = { path = "../common" }
detector = { path = "../detector" }
dex-adapter-trait = { path = "../dex-adapter-trait" }