[package]
name = "detector"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
rust_decimal = "1.32"
rust_decimal_macros = "1.32"