[package]
name = "market-data-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Aptos SDK dependencies
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", tag = "aptos-indexer-processor-sdk-v2.1.1" }

# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for REST API calls
reqwest = { version = "0.11", features = ["json"] }

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Internal dependencies
common = { path = "../common" }
config_lib = { path = "../config", package = "config" }
detector = { path = "../detector" }
dex-adapter-trait = { path = "../dex-adapter-trait" }
yoke = "0.8.0"
futures = "0.3.31"
rustls = "0.23.28"

[dev-dependencies]
mockall = "0.12"
